[gd_scene load_steps=2 format=3 uid="uid://db1npmgoitai4"]

[ext_resource type="Script" path="res://source/user_interface/main.gd" id="1_1dr5h"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1dr5h")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.760605, 0.887918, 0.955723, 1)

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -349.5
offset_right = 349.5
offset_bottom = 126.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 92
text = "Snow Ball Fight!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 360)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -180.0
offset_right = 300.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="player_name" type="HBoxContainer" parent="menu"]
layout_mode = 2

[node name="label" type="Label" parent="menu/player_name"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Player Name"

[node name="line_edit" type="LineEdit" parent="menu/player_name"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Some Player 1"
max_length = 15

[node name="play" type="Button" parent="menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "PLAY"

[node name="quit" type="Button" parent="menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "QUIT"

[node name="connection_status" type="Label" parent="menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Not connected to the server..."
horizontal_alignment = 1
